--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/cli": "^5.5.0",
     "@types/react-modal": "^3.12.1",
     "@types/uuid": "^8.3.1"
   }
