--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.config.ts",
     "start": "webpack serve --config webpack.dev.config.ts",
-    "test": "jest --env=jsdom"
+    "test": "jest --watchAll --env=jsdom"
   },
   "jest": {
     "setupFilesAfterEnv": [
